--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "capov"
-version = "0.1.0"
-description = "Captain Obvious: A fixer for only the most trivial Python code issues."
+version = "0.1.1"
+description = "Captain Obvious: Corrects all the obvious errors in a Python-script."
 readme = "README.md"
 authors = [
-  { name = "Hans", email = "hans@example.com" }
+  { name = "Hans-Peter Radtke" }
 ]
 license = { text = "MIT" }
 requires-python = ">=3.8"
