--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-.git-credentials
-capov/__pycache__/*.*.*
-capov/test/__pycache__/*/
+# Python cache
+__pycache__/
+*.py[cod]
+*.pyo
 
+# Build artifacts
+build/
+dist/
+*.egg-info/
+
+# Test cache
+*.coverage
+.cache/
+
+# IDEs and editors
+.idea/
+.vscode/
+
+# Credentials
+.git-credentials
