--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-# Exclude test data and tests from pip-installable package
-exclude capov/tests/*
-exclude capov/tests/faulty_scripts/*
+# Include test data and example in pip-installable package
+include capov/example.py
+recursive-include capov/tests *.py
