--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,19 @@
 [project]
 name = "capov"
-version = "0.1.1"
+version = "0.1.2"
 description = "Captain Obvious: Corrects all the obvious errors in a Python-script."
 readme = "README.md"
 authors = [
   { name = "Hans-Peter Radtke" }
 ]
 license = { text = "MIT" }
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 dependencies = [
-  "autoimport"
+  "autoimport >= 1.0.0, < 2.0.0"
 ]
+
+[project.optional-dependencies]
+test = ["pytest"]
 
 [project.scripts]
 capov = "capov.__main__:main"
@@ -19,6 +22,9 @@ captain-obvious = "capov.__main__:main"
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.package-data]
+"capov" = ["example.py", "tests/*.py", "tests/faulty_scripts/*.py"]
 
 [tool.setuptools]
 license-files = []
