--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ authors = [
 ]
 license = { text = "MIT" }
 requires-python = ">=3.11"
-dependencies = [
+requires = [
   "autoimport >= 1.0.0, < 2.0.0"
+]
+dependencies = [
+  "autoimport"
 ]
 
 [project.optional-dependencies]
